# group_chart

./: .gitignore  05_2022.html  2019.html  2019_1st_half.html  2019_2nd_half.html  2019_4th_q.html  2020.html  2020_1st_half.html  2020_1st_q.html  2020_2nd_q.html  2020_3rd_q.html  2020v2.html  2021.html  Cargo.toml  README.md  april2020.html  august.html  august2020.html  august2021.html  december.html  december2020.html  feb2021.html  february.html  history_charts.js  index.html  january.html  july2020.html  julyy2020.html  june2020.html  june2021.html  key.txt  kwarantanna.html  manual_tracks.txt  march.html  may2020.html  may2021.html  november.html  november2020.html  november2021.html  october.html  (+5 more)
data/: charts_script  html_card  html_card_chart  html_footer  html_header
docs/: april.html  august.html  index.html  july.html  june.html  may.html
src/: config.rs  database.rs  drawer.rs  lastfmapi.rs  lib.rs  main.rs  reader.rs  spotifyapi.rs  strings.rs  webpage.rs
