[package]
name = "group_chart"
version = "1.8.0"
authors = ["Jan Guzik <jan.guzik@cs.ox.ac.uk>"]
edition = "2018"
default-run = "main"

[dependencies]
reqwest= "0.9.24"
serde_derive= "1.0.103"
serde= "1.0.103"
serde_json= "1.0.44"
image = "0.22.3"
imageproc = "0.19.2"
rusttype = "0.8.2"
num-rational = "0.2.2"
threadpool = "1.7.1"
