[package]
name = "group_chart"
version = "1.9.1"
authors = ["Jan Guzik <jan.guzik@cs.ox.ac.uk>"]
edition = "2018"
default-run = "main"

[dependencies]
reqwest= "0.9" #breaks on 0.10 - inroduces futures
serde_derive= "1.0"
serde= "1.0.106"
serde_json= "1.0"
image = "0.23"
imageproc = "0.20"
rusttype = "0.8"
num-rational = "0.2"
threadpool = "1.7"
regex = "1"
lazy_static = "1"
chrono = "0.4"

[dependencies.rusqlite]
version = "0.22"
features = ["bundled"]