[package]
name = "group_chart"
version = "1.9.2"
authors = ["Jan Guzik <jan.guzik@cs.ox.ac.uk>"]
edition = "2018"
default-run = "main"

[dependencies]
serde_derive= "1.0"
serde= { version = "1.0.106", features = ["derive"] }
serde_json= "1.0"
image = "0.23"
imageproc = "0.20"
rusttype = "0.8"
num-rational = "0.2"
threadpool = "1.7"
regex = "1"
lazy_static = "1"
chrono = "0.4"
derive-error = "0.0.4"
rusqlite =  {version = "0.22", features = ["bundled"]}
reqwest = {version = "0.11", features = ["json"]}
futures = "0.3"
async-std = "1.9.0"